Updating activation function of the dense layer

--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "PSOVkYkKfUzB"
       },
@@ -22,13 +22,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-9PeD-7yiWHW",
-        "outputId": "a8da3a71-0ba4-450d-abf0-0245fbe88705"
+        "outputId": "9c3b4952-b410-4fac-d256-4980de5c6c2c"
       },
       "outputs": [
         {
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "eWMED8kCg8PO"
       },
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "btmmKsKbg5I-"
       },
@@ -87,20 +87,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "P-QQ6fHOhqgq",
-        "outputId": "a89877fa-495a-4164-a985-1be4acdfb124"
+        "outputId": "805be3e3-4266-4246-f573-451a27e57661"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 2/2 [00:04<00:00,  2.49s/it]\n"
+            "100%|██████████| 2/2 [00:05<00:00,  2.95s/it]\n"
           ]
         }
       ],
@@ -111,20 +111,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AwOmmW1Viq7t",
-        "outputId": "a10af27c-11ef-4691-f37f-6adab51834f3"
+        "outputId": "713a11f0-69d0-496a-c2bc-dc40efc04297"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 2/2 [00:01<00:00,  1.68it/s]\n"
+            "100%|██████████| 2/2 [00:01<00:00,  1.29it/s]\n"
           ]
         }
       ],
@@ -135,20 +135,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_kbtQz4irCX",
-        "outputId": "adbce8b4-0f48-4d89-e7f6-4641ea5e035f"
+        "outputId": "a6d97a51-a966-4c95-9383-ed2c6b770e32"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 2/2 [00:01<00:00,  1.63it/s]\n"
+            "100%|██████████| 2/2 [00:01<00:00,  1.17it/s]\n"
           ]
         }
       ],
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "6_AZcMCxi1Eh"
       },
@@ -181,13 +181,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rKH5N9ZCjEJE",
-        "outputId": "6d94bf8d-322c-4618-a516-d2029e273498"
+        "outputId": "1b8bf3df-b517-4875-c73f-9b5991ef2ebe"
       },
       "outputs": [
         {
@@ -214,14 +214,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 75
         },
         "id": "oQyA1WB6n0jW",
-        "outputId": "a71411c2-9717-4041-ec03-a6d833ab3284"
+        "outputId": "7ba93326-3207-4e38-b7a7-bc173f4f7954"
       },
       "outputs": [
         {
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "fyfohn6tjUXv"
       },
@@ -267,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "KMQoZ7iJjXFg"
       },
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "C-93PVeGgddE"
       },
@@ -319,73 +319,73 @@
         "\n",
         "model.add(Dense(512, activation = ACTIVATION_FUNCTION_RELU))\n",
         "model.add(Dropout(0.5))\n",
-        "model.add(Dense(2, activation = 'sigmoid'))\n",
+        "model.add(Dense(2, activation = 'softmax'))\n",
         "\n",
-        "model.compile(loss = \"categorical_crossentropy\", optimizer = 'Adamax', metrics = ['accuracy'])"
+        "model.compile(loss = \"categorical_crossentropy\", optimizer = 'adam', metrics = ['accuracy'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zkdBiNdwtm2P",
-        "outputId": "153875a4-df84-4a85-da71-1c2902be44e3"
+        "outputId": "2fd3176f-e657-43d0-fdfd-1a53ed91555a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Model: \"sequential_1\"\n",
+            "Model: \"sequential_4\"\n",
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " conv2d_6 (Conv2D)           (None, 224, 224, 32)      416       \n",
+            " conv2d_24 (Conv2D)          (None, 224, 224, 32)      416       \n",
             "                                                                 \n",
-            " conv2d_7 (Conv2D)           (None, 224, 224, 32)      4128      \n",
+            " conv2d_25 (Conv2D)          (None, 224, 224, 32)      4128      \n",
             "                                                                 \n",
-            " batch_normalization_3 (Batc  (None, 224, 224, 32)     128       \n",
-            " hNormalization)                                                 \n",
+            " batch_normalization_12 (Bat  (None, 224, 224, 32)     128       \n",
+            " chNormalization)                                                \n",
             "                                                                 \n",
-            " max_pooling2d_3 (MaxPooling  (None, 112, 112, 32)     0         \n",
-            " 2D)                                                             \n",
+            " max_pooling2d_12 (MaxPoolin  (None, 112, 112, 32)     0         \n",
+            " g2D)                                                            \n",
             "                                                                 \n",
-            " dropout_4 (Dropout)         (None, 112, 112, 32)      0         \n",
+            " dropout_16 (Dropout)        (None, 112, 112, 32)      0         \n",
             "                                                                 \n",
-            " conv2d_8 (Conv2D)           (None, 112, 112, 64)      8256      \n",
+            " conv2d_26 (Conv2D)          (None, 112, 112, 64)      8256      \n",
             "                                                                 \n",
-            " conv2d_9 (Conv2D)           (None, 112, 112, 64)      16448     \n",
+            " conv2d_27 (Conv2D)          (None, 112, 112, 64)      16448     \n",
             "                                                                 \n",
-            " batch_normalization_4 (Batc  (None, 112, 112, 64)     256       \n",
-            " hNormalization)                                                 \n",
+            " batch_normalization_13 (Bat  (None, 112, 112, 64)     256       \n",
+            " chNormalization)                                                \n",
             "                                                                 \n",
-            " max_pooling2d_4 (MaxPooling  (None, 56, 56, 64)       0         \n",
-            " 2D)                                                             \n",
+            " max_pooling2d_13 (MaxPoolin  (None, 56, 56, 64)       0         \n",
+            " g2D)                                                            \n",
             "                                                                 \n",
-            " dropout_5 (Dropout)         (None, 56, 56, 64)        0         \n",
+            " dropout_17 (Dropout)        (None, 56, 56, 64)        0         \n",
             "                                                                 \n",
-            " conv2d_10 (Conv2D)          (None, 56, 56, 128)       32896     \n",
+            " conv2d_28 (Conv2D)          (None, 56, 56, 128)       32896     \n",
             "                                                                 \n",
-            " conv2d_11 (Conv2D)          (None, 56, 56, 128)       65664     \n",
+            " conv2d_29 (Conv2D)          (None, 56, 56, 128)       65664     \n",
             "                                                                 \n",
-            " batch_normalization_5 (Batc  (None, 56, 56, 128)      512       \n",
-            " hNormalization)                                                 \n",
+            " batch_normalization_14 (Bat  (None, 56, 56, 128)      512       \n",
+            " chNormalization)                                                \n",
             "                                                                 \n",
-            " max_pooling2d_5 (MaxPooling  (None, 28, 28, 128)      0         \n",
-            " 2D)                                                             \n",
+            " max_pooling2d_14 (MaxPoolin  (None, 28, 28, 128)      0         \n",
+            " g2D)                                                            \n",
             "                                                                 \n",
-            " dropout_6 (Dropout)         (None, 28, 28, 128)       0         \n",
+            " dropout_18 (Dropout)        (None, 28, 28, 128)       0         \n",
             "                                                                 \n",
-            " flatten_1 (Flatten)         (None, 100352)            0         \n",
+            " flatten_4 (Flatten)         (None, 100352)            0         \n",
             "                                                                 \n",
-            " dense_2 (Dense)             (None, 512)               51380736  \n",
+            " dense_8 (Dense)             (None, 512)               51380736  \n",
             "                                                                 \n",
-            " dropout_7 (Dropout)         (None, 512)               0         \n",
+            " dropout_19 (Dropout)        (None, 512)               0         \n",
             "                                                                 \n",
-            " dense_3 (Dense)             (None, 2)                 1026      \n",
+            " dense_9 (Dense)             (None, 2)                 1026      \n",
             "                                                                 \n",
             "=================================================================\n",
             "Total params: 51,510,466\n",
@@ -401,13 +401,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SzEHfEAsjdmd",
-        "outputId": "c5bab12d-9ea6-4bbe-8674-6eb7565c56df"
+        "outputId": "d4ffe45c-97d8-4260-9af6-52bd6e0edae1"
       },
       "outputs": [
         {
@@ -415,15 +415,15 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "22/22 [==============================] - 239s 11s/step - loss: 17.4307 - accuracy: 0.6759 - val_loss: 18.0967 - val_accuracy: 0.5000\n",
+            "18/18 [==============================] - 240s 13s/step - loss: 24.1879 - accuracy: 0.6377 - val_loss: 10.7073 - val_accuracy: 0.6793\n",
             "Epoch 2/5\n",
-            "22/22 [==============================] - 234s 11s/step - loss: 3.5217 - accuracy: 0.7141 - val_loss: 4.4961 - val_accuracy: 0.6739\n",
+            "18/18 [==============================] - 238s 13s/step - loss: 5.3883 - accuracy: 0.6539 - val_loss: 4.6722 - val_accuracy: 0.7446\n",
             "Epoch 3/5\n",
-            "22/22 [==============================] - 234s 11s/step - loss: 1.3752 - accuracy: 0.8148 - val_loss: 2.8877 - val_accuracy: 0.7391\n",
+            "18/18 [==============================] - 238s 13s/step - loss: 2.2838 - accuracy: 0.7118 - val_loss: 5.3780 - val_accuracy: 0.7011\n",
             "Epoch 4/5\n",
-            "22/22 [==============================] - 235s 11s/step - loss: 0.5905 - accuracy: 0.8542 - val_loss: 2.7317 - val_accuracy: 0.7500\n",
+            "18/18 [==============================] - 237s 13s/step - loss: 0.8764 - accuracy: 0.7465 - val_loss: 3.8675 - val_accuracy: 0.6793\n",
             "Epoch 5/5\n",
-            "22/22 [==============================] - 235s 11s/step - loss: 0.4002 - accuracy: 0.8738 - val_loss: 3.1450 - val_accuracy: 0.7500\n"
+            "18/18 [==============================] - 238s 13s/step - loss: 0.5018 - accuracy: 0.7616 - val_loss: 2.9331 - val_accuracy: 0.6848\n"
           ]
         }
       ],
@@ -433,20 +433,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 42,
       "metadata": {
         "id": "-2GpAYENwKkq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18553b46-b563-4db6-ea0a-7ca641d7a8b9"
+        "outputId": "f606104f-6825-418a-92df-d8e1218247cb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6/6 [==============================] - 12s 2s/step - loss: 2.5709 - accuracy: 0.7213\n"
+            "6/6 [==============================] - 12s 2s/step - loss: 1.3595 - accuracy: 0.7814\n"
           ]
         }
       ],
@@ -464,30 +464,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "63745115-5a50-40f5-8a0d-561e066c3972"
+        "outputId": "1066d49f-ef6e-43c7-ac01-e5c748f12116"
       },
-      "execution_count": 33,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7213114500045776"
+              "0.7814207673072815"
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 43
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "aGedcxWYuQF7"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
